--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-
-
-
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Bookmarks -CodeWithKalpesh</title>
-    <!--    <link rel="stylesheet" href="style.css">-->
+    <title>Images Lists</title>
 </head>
-<body>  
-    <h1>My BookMarks-codewithkalpesh using h1</h1>
-    <h2>Main Bookmarks-codewithkalpesh using h2</h2>
-    <h3>Main Bookmarks-codewithkalpesh using h3</h3>
-    <h4>Main Bookmarks-codewithkalpesh using h4</h4>
-    <h5>Main Bookmarks-codewithkalpesh using h5</h5>
-    <h6>Main Bookmarks-codewithkalpesh using h6</h6>
+<body>
+    <img width="350" height="250" src="image.png" alt="Train image">
 
-    <p style="background-color: red;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit officia reiciendis nostrum, provident sapiente vero velit voluptate minima atque, quo, distinctio deserunt eos nemo pariatur deleniti sunt similique earum perspiciatis.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad nulla et obcaecati. Asperiores adipisci quo iusto fuga cupiditate doloremque eum beatae recusandae laudantium voluptatem facilis voluptatum aut, distinctio sequi corrupti.
-    Iure voluptas reiciendis deleniti dignissimos a ad, nisi porro fuga harum delectus qui eum atque totam expedita dolores non vero numquam molestias tempore in. Harum perspiciatis corporis voluptate earum quae. </p>
-    <script src="script.js"></script>
+    <table>
+        <tr>
+          <th>Name</th>
+          <th>Designation</th>
+          <th>Fav lang</th>
+        </tr>
+
+        <tr>
+          <td>Kalpesh</td>
+          <td>Programer</td>
+          <td>HTML</td>
+        </tr>
+
+        <tr>
+            <td>adarsh</td>
+            <td>Programer</td>
+            <td>JavaScript</td>
+          </tr>
+      </table>
+      
 </body>
-</html> 
+</html>
